# OpenWith

./: .gitignore  CMakeLists.txt  README.md
daemon/: Dockerfile
daemon/deb/openwith/DEBIAN/: control
daemon/src/: CMakeLists.txt  daemon.cpp  daemon.h  daemon.pro  main.cpp  open-with.xml
demo/src/: CMakeLists.txt  main.cpp  test.pro
include/: api.h
openwith/src/: CMakeLists.txt  main.cpp
